// Copyright 2020 The Swarm Authors. All rights reserved.
// Use of this source code is governed by a BSD-style
// license that can be found in the LICENSE file.

syntax = "proto3";

package routetab;

option go_package = "pb";

// define FindRouteReq message struct here
message FindRouteReq {
    bytes Dest = 1;
    repeated bytes Path = 2;
    int32 Alpha = 3;
}
// define FindRouteResp message struct here
message FindRouteResp {
    bytes Dest = 1;
    repeated RouteItem RouteItems = 2;
}

message RouteItem {
    int64 createTime = 1;
    uint32 ttl = 2;
    bytes neighbor = 3;
    repeated RouteItem nextHop = 4;
}

message SendData {
    string Handler = 1;
    bytes Data = 2;
}